--- a/CMT/WebContent/css/button.css
+++ b/CMT/WebContent/css/button.css
@@ -7,6 +7,7 @@
   	border-radius: 4px;
   	background-color: #E5913E; 
   	color: #2E0F05; 
+  	font-size: 16px;
 }
 
 .button:hover
@@ -17,4 +18,10 @@
 .homepageButton
 {
 	padding: 16px;
+	font-size: 25px;
+}
+
+.dettagliButton
+{
+	height: 90px;
 }
