--- a/CMT/WebContent/css/frame.css
+++ b/CMT/WebContent/css/frame.css
@@ -9,15 +9,15 @@
 	width: 100%; /* Full width */
 	height: 100%; /* Full height */
 	overflow: auto; /* Enable scroll if needed */
-	background-color: rgb(0,0,0); /* Fallback color */
-	background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+	background-color: rgba(0,0,0,0.4); /* colore esterno */
 }
 
 .frame-content
 {
-	background-color: #fefefe;
+	background-color: #FFECD1;
 	margin: auto;
 	padding: 20px;
-	border: 1px solid #888;
+	border: 3px solid #2E0F05;
+	border-radius: 4px;	
 	width: 70%;
 }
