--- a/CMT/WebContent/css/table.css
+++ b/CMT/WebContent/css/table.css
@@ -1,12 +1,21 @@
 .table
 {
 	text-align: left;
+	background-color: white;
+}
+
+.tableContainer
+{
+	height: 150px;
+	overflow: auto;
+	border: 1px solid black;
+	border-collapse: collapse;
 }
 
 .table th
 {
 	padding: 5px;
-	background-color: #999;
+	background-color: #E5913E;
 }
 
 .table tr
@@ -24,5 +33,6 @@
 
 .selected
 {
-	background-color: #00ff40;
+	background-color: #00FF40;
 }
+
