--- a/CMT/WebContent/css/button.css
+++ b/CMT/WebContent/css/button.css
@@ -1,27 +1,12 @@
-.button
-{
-  	padding: 4px;
-  	transition-duration: 0.2s;
-  	cursor: pointer;
-  	border: none;
-  	border-radius: 4px;
-  	background-color: #E5913E; 
-  	color: #2E0F05; 
-  	font-size: 16px;
-}
-
-.button:hover
-{
-  	background-color: #995A26;
-}
-
 .homepageButton
 {
 	padding: 16px;
 	font-size: 25px;
 }
 
-.dettagliButton
+.regularButton
 {
-	height: 90px;
+	padding: 4px;
+	font-size: 16px;
+	width: 100%;
 }
