--- a/CMT/WebContent/css/poster.css
+++ b/CMT/WebContent/css/poster.css
@@ -2,4 +2,14 @@
 {
 	width: 315px;
 	height: 450px;
+	flex: 0 1 150px;
+	margin: 5px;
+  	cursor: pointer;
+  	border-radius: 4px;
+  	transition-duration: 0.2s;
+}
+
+.poster:hover
+{
+	filter: brightness(150%);
 }
