--- a/CMT/WebContent/css/frame.css
+++ b/CMT/WebContent/css/frame.css
@@ -1,23 +1,29 @@
-.frame
+.frameContainer
 {
 	display: none; /* Hidden by default */
 	position: fixed; /* Stay in place */
 	z-index: 1; /* Sit on top */
-	padding-top: 100px; /* Location of the box */
 	left: 0;
 	top: 0;
-	width: 100%; /* Full width */
-	height: 100%; /* Full height */
-	overflow: auto; /* Enable scroll if needed */
+	width: 100%;
+	height: 100%;
+	overflow: auto;
 	background-color: rgba(0,0,0,0.4); /* colore esterno */
 }
 
-.frame-content
+.frame
 {
 	background-color: #FFECD1;
-	margin: auto;
-	padding: 20px;
-	border: 3px solid #2E0F05;
-	border-radius: 4px;	
+	padding: 15px;
 	width: 50%;
+	min-width: 700px;
+	
+	margin: 0;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	
+	border: 3px solid #2E0F05;
+	border-radius: 4px;
 }
