--- a/CMT/WebContent/css/base.css
+++ b/CMT/WebContent/css/base.css
@@ -19,9 +19,14 @@ button
   	color: #2E0F05;  	
 }
 
+table, td, th {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
+
 button:hover
 {
-  	background-color: #995A26;
+  	filter: brightness(70%);
 }
 
 hr
