--- a/CMT/WebContent/css/base.css
+++ b/CMT/WebContent/css/base.css
@@ -12,7 +12,9 @@ body
 
 input[type="text"], [type="password"]
 {
-	width: 320px;
+	width: 100%;
+	
+	box-sizing: border-box;
 	
 	border-radius: 4px;
 	padding: 4px;	
