--- a/CMT/WebContent/css/base.css
+++ b/CMT/WebContent/css/base.css
@@ -10,7 +10,7 @@ body
 	background-color: #FFECD1;
 }
 
-input[type="text"], [type="password"]
+input[type="text"], [type="password"], [type="number"]
 {
 	width: 100%;
 	
@@ -21,6 +21,20 @@ input[type="text"], [type="password"]
 	font-size: 16px;
 	
 	transition-duration: 0.3s;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button
+{
+	-webkit-appearance: none;
+	margin: 0;
+}
+
+/* Firefox */
+input[type=number]
+{
+ 	-moz-appearance: textfield;
 }
 
 button
