--- a/CMT/WebContent/css/frame.css
+++ b/CMT/WebContent/css/frame.css
@@ -13,7 +13,7 @@ div.frameContainer
 
 div.frame
 {
-	background-color: #FFECD1;
+	background-color: var(--yellow);
 	padding: 15px;
 	
 	position: absolute;
@@ -21,5 +21,5 @@ div.frame
 	left: 50%;
 	transform: translate(-50%, -50%);
 	
-	border: 3px solid #2E0F05;
+	border: 3px solid var(--brown);
 }
