--- a/CMT/WebContent/css/projRoom.css
+++ b/CMT/WebContent/css/projRoom.css
@@ -3,7 +3,7 @@ table.projRoom
 	width: 100%;
 	
 	padding: 0px 4px;
-	border: 1px solid #2E0F05;	
+	border: 1px solid var(--brown);
 	
 	background-color: white;
 }
