--- a/CMT/WebContent/css/base.css
+++ b/CMT/WebContent/css/base.css
@@ -56,7 +56,7 @@ button
 	width: 100%;
   	
   	padding: 4px 8px;
-  	border: none;/*1px solid #2E0F05;*/
+  	border: none;
   	
 	font-size: 16px;
 	
