--- a/CMT/WebContent/css/base.css
+++ b/CMT/WebContent/css/base.css
@@ -15,6 +15,10 @@
    font-family: arial;
    color: var(--brown);
    border-radius: 4px;
+   marging: 0;
+   paddint: 0;
+   list-style: none;
+   text-decoration: none;
 }
 
 body
@@ -22,6 +26,8 @@ body
 	padding: 10px 10px;
 	
 	background-color: var(--yellow);
+	
+	box-sizing: border-box;
 }
 
 input[type=text], input[type=password], input[type=number]
