--- a/CMT/WebContent/css/header.css
+++ b/CMT/WebContent/css/header.css
@@ -1,8 +1,30 @@
-#header
+/*#header
 {
-	width: auto;
+	width: 100%;
+	height: 100px;
+	display: block;
+	background-color: var(--yellow);
+}*/
+
+header
+{
 	
-	position: fixed;
+}
+
+header span
+{
+	display: inline-flex;
+  	align-items: center;
+}
+
+#logo
+{
+	cursor: pointer;
+}
+
+#logo:hover
+{
+	filter: brightness(115%);
 }
 
 #headerLogo
@@ -13,9 +35,20 @@
 	padding-right: 20px;
 }
 
+#siteName
+{
+	font-size: 40px;
+	font-weight: 1000;
+	
+	white-space: nowrap;
+	
+	cursor: pointer;
+}
+
 #homepageButton
 {
 	padding: 16px;
 	
 	font-size: 25px;
 }
+
