--- a/CMT/WebContent/css/base.css
+++ b/CMT/WebContent/css/base.css
@@ -12,13 +12,15 @@
 
 @font-face
 {
-	font-family: 'hamletOsf';
-	src: url(../fonts/hamletOsf.ttf);
+	font-family: 'test';
+	src: url(../fonts/test.ttf);
 }
 
 *
 {
-	font-family: hamletOsf;
+	font-family: test;
+	/*letter-spacing: 0.02em;
+	word-spacing: 0.1em;*/
  	color: var(--brown);
 	border-radius: 4px;
 }
