--- a/CMT/WebContent/css/frame.css
+++ b/CMT/WebContent/css/frame.css
@@ -16,10 +16,13 @@ div.frame
 	background-color: var(--yellow);
 	padding: 15px;
 	
-	position: absolute;
+	/*position: absolute;
 	top: 50%;
 	left: 50%;
-	transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);*/
 	
+	width: fit-content;
+    height: fit-content;
+    
 	border: 3px solid var(--brown);
 }
