--- a/CMT/WebContent/css/frame.css
+++ b/CMT/WebContent/css/frame.css
@@ -8,21 +8,24 @@ div.frameContainer
 	width: 100%;
 	height: 100%;
 	overflow: auto;
+	
 	background-color: rgba(0,0,0,0.4);
 }
 
 div.frame
 {
-	background-color: var(--yellow);
+	
 	padding: 15px;
 	
-	/*position: absolute;
+	position: absolute;
 	top: 50%;
 	left: 50%;
-	transform: translate(-50%, -50%);*/
+	transform: translate(-50%, -50%);
 	
-	width: fit-content;
-    height: fit-content;
+	/*width: fit-content;
+    height: fit-content;*/
     
 	border: 3px solid var(--brown);
+	
+	background-color: var(--yellow);
 }
