--- a/CMT/WebContent/css/header.css
+++ b/CMT/WebContent/css/header.css
@@ -1,24 +1,10 @@
-/*#header
-{
-	width: 100%;
-	height: 100px;
-	display: block;
-	background-color: var(--yellow);
-}*/
 
-header
-{
-	
-}
-
-header span
-{
-	display: inline-flex;
-  	align-items: center;
-}
 
 #logo
 {
+	display: inline-flex;
+  	align-items: center;
+	
 	cursor: pointer;
 }
 
@@ -27,7 +13,7 @@ header span
 	filter: brightness(115%);
 }
 
-#headerLogo
+#siteLogo
 {
 	width: 112px;
 	height: 106px;
