--- a/CMT/WebContent/css/frame.css
+++ b/CMT/WebContent/css/frame.css
@@ -29,3 +29,15 @@ div.frame
 	
 	background-color: var(--yellow);
 }
+
+label.frameTitle
+{
+	font-size: 26px;
+	font-weight: 1000;
+}
+
+button.frameExitButton
+{
+	width: auto;
+	float: right;
+}
