--- a/CMT/WebContent/css/base.css
+++ b/CMT/WebContent/css/base.css
@@ -19,6 +19,8 @@
 *
 {
 	font-family: hamletOsf;
+ 	font-size: 18px;
+ 	
  	color: var(--brown);
 	border-radius: 4px;
 }
@@ -27,7 +29,7 @@ body
 {
 	padding: 10px 10px;
 	
-	box-sizing: border-box;
+	/*box-sizing: border-box;*/
 	
 	background-color: var(--yellow);
 }
@@ -39,10 +41,6 @@ input[type=text], input[type=password], input[type=number]
 	box-sizing: border-box;
 	
 	padding: 4px;
-		
-	font-size: 18px;
-	
-	transition-duration: 0.3s;
 }
 
 /* Chrome, Safari, Edge, Opera */
@@ -65,8 +63,6 @@ button
   	
   	padding: 4px 8px;
   	border: none;
-  	
-	font-size: 18px;
 	
 	white-space: nowrap;
 	
