--- a/CMT/WebContent/css/header.css
+++ b/CMT/WebContent/css/header.css
@@ -1,10 +1,15 @@
-
+#headerDiv
+{
+	display: table;
+	width: 100%;
+}
 
 #logo
 {
 	display: inline-flex;
   	align-items: center;
 	
+	transition-duration: 0.2s;
 	cursor: pointer;
 }
 
@@ -29,4 +34,11 @@
 	white-space: nowrap;
 	
 	cursor: pointer;
+}
+
+#headerButtons
+{
+	display: table-cell;
+	vertical-align: middle;
+	width: 1px;
 }
