--- a/CMT/WebContent/css/base.css
+++ b/CMT/WebContent/css/base.css
@@ -21,15 +21,22 @@
 	font-family: hamletOsf;
  	font-size: 18px;
  	
+ 	margin: 0px;
+ 	padding: 0px;
+ 	list-style: none;
+ 	text-decoration: none;
+ 	
  	color: var(--brown);
 	border-radius: 4px;
+	
+	box-sizing: border-box;
 }
 
 body
 {
-	padding: 10px 10px;
+	margin: 20px;
 	
-	/*box-sizing: border-box;*/
+	
 	
 	background-color: var(--yellow);
 }
@@ -61,7 +68,7 @@ button
 {  	  
 	width: 100%;
   	
-  	padding: 4px 8px;
+  	padding: 4px;
   	border: none;
 	
 	white-space: nowrap;
