--- a/CMT/WebContent/css/header.css
+++ b/CMT/WebContent/css/header.css
@@ -1,12 +1,13 @@
 header
-{
-	display: table;
-	width: 100%;
+{	
+	display: flex;
+	align-items: center;	
+	justify-content: space-between;
 }
 
 header span
-{
-	display: inline-flex;
+{	
+	display: flex;
   	align-items: center;
 	
 	transition-duration: 0.2s;
@@ -20,38 +21,26 @@ header span:hover
 
 header span img
 {
-	width: 112px;
-	height: 106px;
+	min-width: 140px;
+	width: 140px;
 	
-	padding-right: 20px;
+	margin-right: 20px;
 }
 
 header span h1
 {
-	font-size: 40px;
-	font-weight: 1000;
-	
-	white-space: nowrap;
-	
 	cursor: pointer;
-}
-
-header table
-{
-	display: table-cell;
-	vertical-align: middle;
-	width: 1px;
 }
 
 header div
 {	
-	width: 1px;
-	display: table-cell;
-	vertical-align: middle;
+	width: auto;
+	
+	display: flex;
+	flex-direction: column;
 }
 
 header div button
 {
-	display: block;	
-	margin: 3px;
+	margin: 2px 0px;
 }
