--- a/CMT/WebContent/css/base.css
+++ b/CMT/WebContent/css/base.css
@@ -49,7 +49,7 @@ body
 
 /* h tags */
 
-h1, h2
+h1, h2, h3
 {
 	font-weight: 1000;
 }
@@ -62,6 +62,11 @@ h1
 h2
 {
 	font-size: 27px;
+}
+
+h3
+{
+	font-size: 21px;
 }
 
 /* misc stuff */
