--- a/CMT/WebContent/css/frame.css
+++ b/CMT/WebContent/css/frame.css
@@ -1,32 +1,36 @@
 div.frameContainer
 {
-	display: none; /* Hidden by default */
-	position: absolute; /* Stay in place */
-	z-index: 1; /* Sit on top */
+	display: none;	/* is set to flex when made visible*/
+	
+	justify-content: center;
+	align-items: center;
+	
+	z-index: 1;
+	
+	position: fixed;
 	left: 0;
 	top: 0;
 	width: 100%;
 	height: 100%;
-	overflow: auto;
 	
-	border-radius: 0px;
+	overflow: auto;
 	
 	background-color: rgba(0,0,0,0.4);
 }
 
 div.frame
 {	
-	padding: 15px;
-	
-	position: absolute;
+	/*position: absolute;
 	top: 50%;
 	left: 50%;
-	transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);*/
 	
 	/*width: fit-content;
     height: fit-content;*/
     
+    padding: 15px;
 	border: 3px solid var(--brown);
+	border-radius: 4px;
 	
 	background-color: var(--yellow);
 }
