--- a/CMT/WebContent/css/table.css
+++ b/CMT/WebContent/css/table.css
@@ -2,7 +2,8 @@ table.table
 {
     width:100%;
     
-	border: none;/*1px solid #2E0F05;*/
+	border: none;
+	border-radius: 4px;
     
     text-align: left;
     
@@ -25,7 +26,8 @@ table.table tbody
 	display: block;
 	overflow: auto;
 	
-	border: none;/*1px solid #2E0F05;*/
+	border: none;
+	border-radius: 4px;
 	
 	background-color: white;
 }
