--- a/CMT/WebContent/css/frame.css
+++ b/CMT/WebContent/css/frame.css
@@ -1,5 +1,42 @@
 div.frameContainer
 {
+	display: none;
+	
+	z-index: 1;
+	
+	position: fixed;	
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	
+	overflow: auto;
+	
+	background-color: rgba(0,0,0,0.4);
+}
+
+div.frameContent
+{	
+	
+	/*width: fit-content;
+    height: fit-content;*/
+    
+    padding: 15px;
+	border: 3px solid var(--brown);
+	
+	background-color: var(--yellow);
+}
+
+span.frameHeader
+{
+	display: flex;
+	align-items: center;	
+	justify-content: space-between;
+}
+
+/*
+div.frameContainer
+{
 	display: none;	/* is set to flex when made visible*/
 	
 	justify-content: center;
@@ -18,7 +55,7 @@ div.frameContainer
 	background-color: rgba(0,0,0,0.4);
 }
 
-div.frame
+div.frameContent
 {	
 	/*position: absolute;
 	top: 50%;
@@ -33,11 +70,4 @@ div.frame
 	border-radius: 4px;
 	
 	background-color: var(--yellow);
-}
-
-span.frameHeader
-{
-	display: flex;
-	align-items: center;	
-	justify-content: space-between;
-}
+}*/
