--- a/CMT/WebContent/css/table.css
+++ b/CMT/WebContent/css/table.css
@@ -1,28 +1,28 @@
-table.table
+div.table
 {
-	border: none;
+	border: 4px solid var(--orange);
 	border-radius: 4px;
-    
-    text-align: left;
-    
-    background-color: var(--orange);
+	
+	background-color: var(--orange);
 }
 
-table.table thead
-{    
-	width: calc(100% - 1em);
-
-	display: table;
-
-	table-layout: fixed;
-}
-
-table.table tbody
+div.table span h3
 {
-	height: 150px;
+	padding: 1px 4px;
+}
 
-	display: block;
+div.table div
+{
+	width: 100%;
+	height: 100%;
+	
 	overflow: auto;
+}
+
+div.table div table
+{
+	width: 100%;
+	height: 300px;
 	
 	border: none;
 	border-radius: 4px;
@@ -30,7 +30,7 @@ table.table tbody
 	background-color: white;
 }
 
-table.table tbody tr
+div.table div table tr
 {
 	width: 100%;
 
@@ -42,14 +42,10 @@ table.table tbody tr
 	border-style: none none solid none;
 }
 
-table.table tbody tr:hover
+div.table div table tr:hover
 {	
 	background-color: var(--light-green);
 	
 	cursor: pointer;
 }
 
-table.table tr.selected
-{
-	background-color: var(--green);
-}
