--- a/CMT/WebContent/css/header.css
+++ b/CMT/WebContent/css/header.css
@@ -1,7 +1,7 @@
 header
 {	
 	display: flex;
-	align-items: center;	
+	align-items: center;
 	justify-content: space-between;
 }
 
@@ -40,7 +40,7 @@ header div
 	padding-left: 100px;
 }
 
-header div button
+header div button + button
 {
-	margin: 2px 0px;
+	margin-top: 4px;
 }
