--- a/CMT/WebContent/css/optionsList.css
+++ b/CMT/WebContent/css/optionsList.css
@@ -48,3 +48,15 @@
 {
 	margin: 0px 5px;
 }
+
+/**********************************************/
+
+.optionsList > span.euroSpan input
+{
+	width: 100%;
+}
+
+.optionsList > span.euroSpan label
+{
+	margin: 0px 5px;
+}
