--- a/CMT/.settings/org.eclipse.wst.common.component
+++ b/CMT/.settings/org.eclipse.wst.common.component
@@ -1,26 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-                
+                    
+    
     
     
     <wb-module deploy-name="CMT">
-                                
+                                        
+        
         
         
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
-                                
+                                        
+        
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-                                
+        <dependent-module archiveName="json-20200518.jar" deploy-path="/WEB-INF/lib" handle="module:/classpath/lib/D:/Programmazione/Java/lib/json-20200518.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+                                        
+        
         
         
         <property name="java-output-path" value="/CMT/build/classes"/>
+                
         <property name="context-root" value="CMT"/>
-                            
+                                    
+    
     
     
     </wb-module>
-            
+                
+
 
 
 </project-modules>
