--- a/CMT/WebContent/css/table.css
+++ b/CMT/WebContent/css/table.css
@@ -1,36 +1,37 @@
-div.table
-{
-	border: 4px solid var(--orange);
+table.table
+{	
+	padding: 4px;
+
 	border-radius: 4px;
-	
-	background-color: var(--orange);
+    
+    text-align: left;
+    
+    background-color: var(--orange);
 }
 
-div.table span h3
-{
-	padding: 1px 4px;
+table.table thead
+{    
+	width: calc(100% - 0.5em);
+
+	padding-bottom: 4px;
+
+	display: table;
+
+	table-layout: fixed;
 }
 
-div.table div
+table.table tbody
 {
-	width: 100%;
-	height: 100%;
+	display: block;
 	
 	overflow: auto;
-}
-
-div.table div table
-{
-	width: 100%;
-	height: 300px;
 	
-	border: none;
 	border-radius: 4px;
 	
 	background-color: white;
 }
 
-div.table div table tr
+table.table tbody tr
 {
 	width: 100%;
 
@@ -42,10 +43,17 @@ div.table div table tr
 	border-style: none none solid none;
 }
 
-div.table div table tr:hover
+table.table tbody tr:hover
 {	
 	background-color: var(--light-green);
-	
-	cursor: pointer;
 }
 
+table.table tbody tr.selected
+{
+	background-color: var(--green);
+}
+
+table.handable tbody tr:hover
+{		
+	cursor: pointer;
+}
