--- a/CMT/WebContent/css/modal.css
+++ b/CMT/WebContent/css/modal.css
@@ -15,7 +15,7 @@ div.modalContainer
 	
 	overflow: auto;
 	
-	background-color: rgba(0,0,0,0.5);
+	background-color: rgba(0, 0, 0, 0.5);
 }
 
 div.modalContainer > div
