--- a/CMT/WebContent/css/eye.css
+++ b/CMT/WebContent/css/eye.css
@@ -1,12 +1,12 @@
 .eye
 {
 	width: 27px;
-	height: 24px;
+	height: 27px;
 	
-	filter: invert(11%) sepia(14%) saturate(5308%) hue-rotate(345deg) brightness(93%) contrast(99%);
+	filter: var(--brown-filter);
 }
 
 .eye:hover
 {
-	filter: invert(11%) sepia(14%) saturate(5308%) hue-rotate(345deg) brightness(170%) contrast(99%);
+	filter: var(--light-brown-filter);
 }
