--- a/CMT/WebContent/css/base.css
+++ b/CMT/WebContent/css/base.css
@@ -99,6 +99,9 @@ body header div img
 	
 	margin-right: 20px;
 	
+	transition-duration: 0.2s;
+	cursor: pointer;
+	
 	filter: var(--brown-filter);
 }
 
