--- a/CMT/WebContent/css/base.css
+++ b/CMT/WebContent/css/base.css
@@ -143,7 +143,7 @@ h3
 	font-size: 20px;
 }
 
-/* misc stuff */
+/* input */
 
 input[type=text], input[type=password]
 {
@@ -187,4 +187,5 @@ button:disabled
 hr
 {
 	margin: 15px 0px;
+	background: var(--brown);
 }
