--- a/CMT/WebContent/css/room.css
+++ b/CMT/WebContent/css/room.css
@@ -18,3 +18,24 @@ table.room img
 	
 	cursor: pointer;
 }
+
+/*************************************************/
+
+@media only screen (-moz-min-device-pixel-ratio: 2), 
+	   only screen and (-o-min-device-pixel-ratio: 2/1), 
+	   only screen and (-webkit-min-device-pixel-ratio: 2), 
+	   only screen and (min-device-pixel-ratio: 2)
+{
+	table.room
+	{		
+		padding: 7px 3px 0px 3px;
+	}
+	
+	table.room img
+	{
+		width: 48px;
+		height: 37px;
+		
+		margin: 3px 7px;
+	}
+}
