--- a/CMT/WebContent/css/base.css
+++ b/CMT/WebContent/css/base.css
@@ -151,6 +151,16 @@ input[type=text], input[type=password]
 	border-radius: 4px;
 }
 
+/* textarea */
+
+textarea
+{
+	padding: 4px 6px;
+	border-radius: 4px;
+	
+	resize: none;
+}
+
 /* button */
 
 button
